Update server version and JVM opts